--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
 <head>
   <meta charset="utf-8">
   <title>NATASHA DSOUZA</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon1.ico">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1><em>I'm Natasha.</em></h1>
     <p>
     <h2 class="prog">A <span class="pro">pro</span>grammer.</h2>
     </p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
 
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/Profile Picture.png" alt="Profile Picture" width="200px" height="200px">
+      <img src="Profile Picture.png" alt="Profile Picture" width="200px" height="200px">
       <h2>Hello.</h2>
       <p>I'm a web development student. I work at Jananial Enterpries. I ❤ tea and pizza </p>
     </div>
@@ -32,12 +32,12 @@
     </div>
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="img-ms" src="images/microsoft.png" alt="microsoft">
+      <img class="img-ms" src="microsoft.png" alt="microsoft">
       <h3>Microsoft Applications</h3>
       <p>I can work well with all the Microsoft Applications. I can even use Tally and MS Database.</p>
     </div>
     <div class="skill-row">
-      <img class="img-bake" src="images/bakings.png" alt="baking" >
+      <img class="img-bake" src="bakings.png" alt="baking" >
       <h3>Baking</h3>
       <p>I like to experiment and bake things. I do make a sweet dish or some fastfood occasionally.</p>
     </div>
